--- a/Assignment 2.html
+++ b/Assignment 2.html
@@ -14,7 +14,7 @@
     </header>
     
     <main>
-        <p class="title-greeting">Hello there!</p>
+        <p class="title-greeting">Hello there everyone!</p>
 
         <p class="title-name">I'm Manuel Castro &#128515;</p>
 
