made changes to webpage

--- a/about.html
+++ b/about.html
@@ -7,7 +7,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/337be747ec.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="mystyle.css">
     <title>Manuel Castro</title>
 </head>
@@ -26,20 +25,14 @@
             <a class="btn btn-small" href="portfolio.html">Portfolio</a>
             <a class="btn btn-small" href="contact.html">Contact</a>
         </nav>
-
-        <nav class="menu-social">
-            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="#"><i class="fa-brands fa-reseachgate"></i></a>
-            <a href="#"><i class="fa-brands fa-youtube"></i></a>
-        </nav>  
-
     </header><!--site header-->
     
     <main class="site-main">
        <div class="container">
-            <p class="title-greeting">Hello everyone!</p>
-            <p class="title-name"><span>I'm Manuel Castro</span> </p>
-            <p>My passion for creating projects started at an early age. When middle school class was over,  my friends and I would go play video games. It was a mystery to me how games were created. However, it wasn't until later in my life that I actually delved into the software development involved in those games. That interest led to discovering other programming technologies such as java, c++ and python. I decided to go to college after my military service to major in computer science and engineering. At first, the subject was literally a foreign language but with hands on experince it became easier to grasp all the concepts. To date, I continue to learn and grow in the software development industry and hope to collaborate in rewarding projects in the near future.</p> 
+            <h2>About</h2>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis esse cum dolorum quis consequuntur dolores error quam, dolore ipsa ab voluptas nulla fugiat natus sequi iure minima corporis, accusamus similique sed tenetur. Voluptates sequi numquam ducimus nulla. Ab, iste temporibus facilis culpa saepe atque voluptas tenetur laborum vel corporis qui!
+            </p>
         </div>
     </main><!--site-main-->
 </div><!--flex-container-->
