--- a/education.html
+++ b/education.html
@@ -26,20 +26,25 @@
             <a class="btn btn-small" href="portfolio.html">Portfolio</a>
             <a class="btn btn-small" href="contact.html">Contact</a>
         </nav>
-
-        <nav class="menu-social">
-            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="#"><i class="fa-brands fa-reseachgate"></i></a>
-            <a href="#"><i class="fa-brands fa-youtube"></i></a>
-        </nav>  
-
     </header><!--site header-->
     
     <main class="site-main">
        <div class="container">
-            <p class="title-greeting">Hello everyone!</p>
-            <p class="title-name"><span>I'm Manuel Castro</span> </p>
-            <p>My passion for creating projects started at an early age. When middle school class was over,  my friends and I would go play video games. It was a mystery to me how games were created. However, it wasn't until later in my life that I actually delved into the software development involved in those games. That interest led to discovering other programming technologies such as java, c++ and python. I decided to go to college after my military service to major in computer science and engineering. At first, the subject was literally a foreign language but with hands on experince it became easier to grasp all the concepts. To date, I continue to learn and grow in the software development industry and hope to collaborate in rewarding projects in the near future.</p> 
+            <h2>Education</h2>
+
+            <div>
+                <div class="box">
+                    <div class="degree-header">
+                    <i class="fa-solid fa-graduation-cap"></i>
+                    <span class="btn btn-small">2007</span>
+                </div>
+                <div class="degree-content">
+                    <p class= "degree-title">Bachelor's Degree in Computational Systems</p>
+           
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati delectus doloremque recusandae quis! Tenetur non sapiente recusandae aut nemo est!
+                    </p>
+                </div>
+            </div>        
         </div>
     </main><!--site-main-->
 </div><!--flex-container-->
