--- a/home.html
+++ b/home.html
@@ -39,7 +39,9 @@
        <div class="container">
             <p class="title-greeting">Hello everyone!</p>
             <p class="title-name"><span>I'm Manuel Castro</span> </p>
-            <p>My passion for creating projects started at an early age. When middle school class was over,  my friends and I would go play video games. It was a mystery to me how games were created. However, it wasn't until later in my life that I actually delved into the software development involved in those games. That interest led to discovering other programming technologies such as java, c++ and python. I decided to go to college after my military service to major in computer science and engineering. At first, the subject was literally a foreign language but with hands on experince it became easier to grasp all the concepts. To date, I continue to learn and grow in the software development industry and hope to collaborate in rewarding projects in the near future.</p> 
+            <p>Web developers use programming languages like HTML to write website code. These professionals also fix bugs, manage upgrades, and install security measures. Sometimes they create content and contribute to a website's design and layout.
+
+            The BLS reports that the largest employers of web developers are the computer systems design and publishing industries. Many web developers are also self-employed. Web development teams typically comprise members specializing in user interface, back-end development, and maintenance. Job duties often include collaborating with executives to understand their organization's web presence goals (computerscience.org).</p> 
         </div>
     </main><!--site-main-->
 </div><!--flex-container-->
